# gmail_skill

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
skills/: skill_email_reply.md  skill_gmail.md
src/gmail_skill/: auth.py  calendar_api.py  gmail.py  mcp_server.py  storage.py
